k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-gke-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: java-gke
  template:
    metadata:
      labels:
        app: java-gke
    spec:
      containers:
      - name: app
        image: your-dockerhub-user/java-gke-demo:latest
        ports:
        - containerPort: 8080
