k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: java-gke-service
spec:
  selector:
    app: java-gke
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
